# plotch

./: .gitignore  README.md  pyproject.toml  sandbox.py  sandbox2.py  setup.py
plotch/: __init__.py  config.py  config_default.py  main.py  main2.py
plotch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
